--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,11 +1,11 @@
 .header{
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     border: 1px solid red;
     font-size: 0.9rem;
-    padding: 1em 3em;
+    padding: 0 3em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,4 +13,18 @@
 
 .logo{
     height: 50px;
+}
+
+.header-nav{
+    color: var(--primary-color);
+    list-style: none;
+    height: 100%;
+    /* float: left; */
+}
+
+.header-nav > li{
+    border: 1px solid blue;
+    display: inline;
+    padding: 0 5px;
+    height: 100%;
 }
