--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,9 +3,8 @@
     top: 0;
     left: 0;
     right: 0;
-    border: 1px solid red;
     font-size: 0.9rem;
-    padding: 0 3em;
+    padding: 1em 4em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,15 +15,26 @@
 }
 
 .header-nav{
-    color: var(--primary-color);
+    color: var(--secondary-color);
     list-style: none;
     height: 100%;
-    /* float: left; */
+    margin-left: 10%;
+    display: flex;
+    flex-grow: 1;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 3em;
 }
 
 .header-nav > li{
-    border: 1px solid blue;
     display: inline;
     padding: 0 5px;
     height: 100%;
+}
+
+.header-button{
+    display: block;
+    padding: .5em 1em !important;
+    background-color: var(--secondary-color);
+    color: #fff;
 }
