--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,40 +1,55 @@
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    font-size: 0.9rem;
-    padding: 1em 4em;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-bottom: 1px solid var(--clr-900);
 }
 
-.logo{
-    height: 50px;
+.header > .container{
+  font-size: 1rem;
+  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 
-.header-nav{
-    color: var(--secondary-color);
-    list-style: none;
-    height: 100%;
-    margin-left: 10%;
-    display: flex;
-    flex-grow: 1;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 3em;
+.logo {
+  height: 50px;
+  margin-block: 1em;
 }
 
-.header-nav > li{
-    display: inline;
-    padding: 0 5px;
-    height: 100%;
+.header-nav {
+  color: var(--clr-900);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 1.2em;
 }
 
-.header-button{
-    display: block;
-    padding: .5em 1em !important;
-    background-color: var(--secondary-color);
-    color: #fff;
+.nav-element {
+  position: relative;
+  display: block;
+  padding: 1em;
+  cursor: pointer;
+  background: linear-gradient(
+      to right,
+      var(--clr-100),
+      var(--clr-100)
+    ),
+    linear-gradient(
+      to right,
+      var(--secondary-color),
+      var(--secondary-color)
+    );
+  background-size: 100% 5px, 0 5px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
+}
+
+.nav-element:hover {
+  background-size: 0 5px, 100% 5px;
 }
