--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,13 +7,13 @@
   --clr-300: #d2d2d2;
   --clr-400: #ccc;
   --clr-500: #999;
-  --clr-600: #a9a9a966;
-  --clr-700: #333;
-  --clr-800: #8484841a;
-  --clr-900: #121212;
+  --clr-600: #a9a9a9;
+  --clr-700: #848484;
+  --clr-800: #333;
+  --clr-900: #222;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap");
 
 /* https://piccalil.li/blog/a-modern-css-reset */
 
@@ -51,6 +51,12 @@ body {
 body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 /* A elements that don't have a class get default styles */
@@ -80,4 +86,16 @@ svg {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+.container{
+  padding-inline: 4em;
+}
+
+.primary-cta {
+  display: block;
+  cursor: pointer;
+  padding: 0.6em 1em;
+  background-color: var(--secondary-color);
+  color: var(--clr-100);
 }
