--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,40 @@
 .carousel{
-    width: 100%;
-    height: 100%;
+    width: 1520px;
+    height: 360px;
+    position: relative;
     border: 1px solid red;
+}
+
+.left-btn, .right-btn {
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.left-btn{
+    left: 0;
+}
+
+.right-btn{
+    right: 0;
+}
+
+.control-dots {
+    width: auto !important;
+    right: 10%;
+}
+
+.carousel-indecator {
+    display: inline-block;
+    height: 15px;
+    width: 5px;
+    background-color: var(--clr-400);
+    margin-right: 10px;
+    transition: height 400ms ease-in-out;
+}
+
+.carousel-indecator.selected {
+    background-color: var(--secondary-color);
+    height: 20px;
 }
