--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -100,6 +100,18 @@ svg {
   padding: 0.6em 1em;
   background-color: var(--secondary-color);
   color: var(--clr-100);
+  outline: none;
+  border: 0;
+}
+
+.disable-cta {
+  display: block;
+  cursor: pointer;
+  padding: 0.6em 1em;
+  background-color: var(--primary-color);
+  color: var(--clr-700);
+  outline: none;
+  border: 0;
 }
 
 .main-content {
